<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMain"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_gravity="center_horizontal|start"
                android:layout_weight="1"
                android:text="@string/btn_main"/>

            <Button
                android:id="@+id/btnGpsSet"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_gravity="center_horizontal|start"
                android:layout_weight="1"
                android:text="@string/btn_gps_set"/>

            <Button
                android:id="@+id/btnState"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_gravity="center_horizontal|start"
                android:layout_weight="1"
                android:text="@string/btn_state"/>

            <Button
                android:id="@+id/btnPedometer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_gravity="center_horizontal|start"
                android:layout_weight="1"
                android:text="@string/btn_pedometer"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="14">

            <fragment
                class="com.google.android.gms.maps.MapFragment"
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/textViewLimit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/textview_about"
                android:textSize="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTextTemp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/btnRefresh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_gravity="center_horizontal|start"
                android:layout_weight="1"
                android:text="@string/btn_refresh" />

            <Button
                android:id="@+id/btnEnrollment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_gravity="center_horizontal|start"
                android:layout_weight="1"
                android:text="@string/btn_enrollment"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>