<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMain"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_gravity="center_horizontal|start"
                android:layout_weight="1"
                android:text="@string/btn_main"/>

            <Button
                android:id="@+id/btnGpsSet"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_gravity="center_horizontal|start"
                android:layout_weight="1"
                android:text="@string/btn_gps_set"/>

            <Button
                android:id="@+id/btnState"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_gravity="center_horizontal|start"
                android:layout_weight="1"
                android:text="@string/btn_state"/>

            <Button
                android:id="@+id/btnPedometer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_gravity="center_horizontal|start"
                android:layout_weight="1"
                android:text="@string/btn_pedometer"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/circle1"/>

                <TextView
                    android:id="@+id/textViewData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_alignBottom="@id/circle"
                    android:layout_alignLeft="@id/circle"
                    android:layout_alignRight="@id/circle"
                    android:layout_alignTop="@id/circle"
                    android:textSize="24dp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <TextView
                android:id="@+id/textViewCalorie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/textViewHeight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"
                android:layout_weight="1"
                android:text="@string/edit_text_height"
                android:textSize="24dp"/>

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="number"
                android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/textViewWeight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"
                android:layout_weight="1"
                android:text="@string/edit_text_weight"
                android:textSize="24dp"/>

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="number"
                android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/btnEnrollment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_gravity="center_horizontal|start"
                android:text="@string/btn_enrollment"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>